Fix: Update table header for better contrast

--- a/datafiles/static/hackage.css
+++ b/datafiles/static/hackage.css
@@ -1314,9 +1314,4 @@ a.deprecated[href]:visited {
       background-color: #5E5184;
       color: #e0e0e0;
   }
-
-  tbody td{
-      background-color: #926efa;
-      color: white;
-  }
 }
